--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "3.6.2",
     "react-native-safe-area-context": "^4.9.0",
